--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ yfinance = "^0.2.50"
 pandas = "^2.2.3"
 yahooquery = "^2.3.7"
 deep-translator = "^1.11.4"
+langchain-community = "^0.3.9"
 
 
 [build-system]
